# Pinecone-Ingestor

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pinecone_manifest.json  pyproject.toml  run.sh  setup.sh
