[project]
name = "pinecone-ingestor"
version = "0.1.0"
description = ""
authors = [
    {name = "Ben Tran"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "streamlit (>=1.49.1,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-openai (>=0.3.32,<0.4.0)",
    "langchain-unstructured (>=0.1.6,<0.2.0)",
    "langchain-text-splitters (>=0.3.10,<0.4.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "tiktoken (>=0.11.0,<0.12.0)",
    "spacy (>=3.8.7,<4.0.0)",
    "pinecone (>=7.3.0,<8.0.0)",
    "unstructured[all-docs] (>=0.18.14,<0.19.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "scipy (>=1.16.1,<2.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "regex (>=2025.8.29,<2026.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
